--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,7 @@
 book_filename: "spatialml"
 delete_merged_file: true
 new_session: yes
+output_dir: "docs"
 language:
   ui:
     chapter_name: "Chapter "
