--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,10 @@
 book_filename: "spatialml"
+rmd_files: ["index.Rmd",
+            "01-intro.Rmd",
+            "02-variable_selection.Rmd",
+            "06-references.Rmd"]
 delete_merged_file: true
-new_session: yes
+new_session: no
 output_dir: "docs"
 language:
   ui:
