--- a/_output.yml
+++ b/_output.yml
@@ -7,6 +7,15 @@ bookdown::gitbook:
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     download: ["pdf", "epub"]
+    sharing:
+      facebook: no
+      github: yes
+      twitter: no
+      linkedin: no
+      weibo: no
+      instapaper: no
+      vk: no
+      whatsapp: no
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
