--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,11 +1,11 @@
 book_filename: "spatialml"
 rmd_files: ["index.Rmd",
-            "technical_guidelines.Rmd",
-            "02-variable_selection.Rmd",
-            "06-references.Rmd"]
+           "planned_content.Rmd",
+           "technical_guidelines.Rmd",
+           "06-references.Rmd"]
 delete_merged_file: true
 new_session: no
 output_dir: "docs"
 language:
   ui:
-    chapter_name: "Chapter "
+    chapter_name: ""
